# youbi-demucs

./: .gitignore  PLAN.md  README.md  pyproject.toml  start.sh  项目运行部署报告.md
tests/: test_failed_task_completion.py
ydbi_demucs/: __init__.py  config.py  db.py  demucs.py  local_test.py  main.py  service.py  storage.py  video_info.py  worker.py
